--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,18 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
+  overflow-y: auto;
 
   position: relative;
+}
+
+.box::-webkit-scrollbar {
+  display: none;
+}
+
+.box {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .loader {
